# dsig

./: Dockerfile  blake_wots.txt  build.py  build.sh  format.sh  output.txt  targets.yaml
conan/exports/compiler-options/: compileroptions.py
conan/exports/compiler-options/cmake/: setup.cmake
conan/invoker/: invoker.py
crypto/: conanfile.py
crypto/bench/simple/src/: CMakeLists.txt  main-dynamic.cpp
crypto/src/: CMakeLists.txt
crypto/src/asymmetric/: dalek.cpp  dalek.hpp  dilithium.cpp  dilithium.hpp  switchable-crypto.hpp
crypto/src/hash/: blake3.hpp  haraka.hpp  sha256.hpp  siphash.hpp
ctrl/src/: block.cpp  block.hpp
dsig/: conanfile.py  config.toml
dsig-apps/: conanfile.py
dsig-apps/src/: CMakeLists.txt  main.cpp  ping.cpp  types.hpp
dsig-apps/src/auditable/: client.cpp  common.hpp  kvstores.hpp  server.cpp
dsig-apps/src/auditable/app/: app.hpp  flip.hpp  herd.hpp  liquibook.hpp  memc.hpp  redis.hpp
dsig-apps/src/auditable/app/internal/liquibook/: common.h  server.h
dsig-apps/src/tail-p2p/: receiver-builder.hpp  receiver.hpp  sender-builder.hpp  sender.hpp  types.hpp
dsig-apps/src/tail-p2p/internal/: async-sender.hpp  buffer.hpp  builder.hpp  header.hpp  lazy.hpp  sync-sender.hpp
dsig-apps/src/ubft/: CMakeLists.txt  client-test.cpp  crypto.hpp  latency-hooks.cpp  latency-hooks.hpp  latency.hpp
dsig-apps/src/ubft/certifier/: certificate.hpp  certifier-builder.hpp  certifier.hpp  ping.cpp  sig-switch.hpp
dsig-apps/src/ubft/certifier/internal/: share-message.hpp
dsig-apps/src/ubft/consensus/: consensus-builder.hpp  consensus.hpp  sig-switch.hpp  test.cpp
dsig-apps/src/ubft/consensus/internal/: broadcast-commit.hpp  messages.hpp  replica-state.hpp  view-change.hpp
dsig-apps/src/ubft/crypto/: dalek.hpp  dsig.hpp  free.hpp  large.hpp  sodium.hpp
dsig-apps/src/ubft/replicated-swmr/: reader.hpp  writer.hpp
dsig-apps/src/ubft/swmr/: writer.hpp
dsig-apps/src/ubft/tail-cb/: broadcaster.hpp  ping.cpp  receiver-builder.hpp  receiver.hpp  sig-switch.hpp
dsig-apps/src/ubft/tail-cb/internal/: signature-message.hpp
dsig-apps/src/ubft/thread-pool/: test.cpp
dsig/src/: CMakeLists.txt  config.hpp  dsig.cpp  dsig.hpp  hors.hpp  latency.hpp  merkle.hpp  mutex.hpp  network.hpp  parser.hpp  pinning.cpp  pinning.hpp  pk-cache.hpp  types.hpp  util.hpp  workers.hpp  wots.hpp
dsig/src/export/: base-types.hpp  config.hpp  dsig.cpp  dsig.hpp  types.hpp
dsig/src/export/internal/: compile-time-config.hpp.in
dsig/src/inf-crypto/: batch.hpp  crypto.hpp  dilithium.hpp  eddsa.hpp
dsig/src/pk/: pipeline.hpp  pk.hpp
dsig/src/sanity/: check.hpp  compile-time.cpp  run-time.cpp
dsig/src/sk/: pipeline.hpp  random.hpp  sk.hpp
dsig/src/test/: blake3-bench.cpp  cpu-tput.cpp  hash-bench.cpp  ping.cpp  scalability.cpp  synthetic.cpp  tput.cpp
dsig/src/test/common/: helpers.hpp  measurements.hpp  p2p.hpp  path.hpp  requests.hpp  signed-message.hpp  validity.hpp
dsig/src/test/tail-p2p/: receiver-builder.hpp  receiver.hpp  sender-builder.hpp  sender.hpp  types.hpp
dsig/src/test/tail-p2p/internal/: async-sender.hpp  buffer.hpp  builder.hpp  header.hpp  lazy.hpp  sync-sender.hpp
hsig/: CMakeLists.txt  conanfile.py
hsig/src/: CMakeLists.txt  background.hpp  config.hpp  foreground.cpp  foreground.hpp  hash-util.hpp  hsig-config.hpp  hsig-types.hpp  hsig.cpp  hsig.hpp  merkle.hpp  random.hpp  wots-types.hpp  wotsplus.hpp
hsig/src/inf-crypto/: batch.hpp  crypto.hpp  dilithium.hpp  eddsa.hpp
hsig/src/internal/: compile-time-config.hpp.in
hsig/src/test/: main.cpp  test-memstore.cpp  test.cpp  wots_bench.cpp
hsig/test/: main.cpp
memstore/src/: store.cpp  store.hpp
results/: haraka_wots.txt  sha_wots.txt
shared/: conanfile.py
shared/src/: concepts.hpp  cx-math.hpp
ubft/: conanfile.py
ubft/src/: CMakeLists.txt  crypto.hpp
ubft/src/rpc/internal/: ingress.hpp
ubft/src/thread-pool/: lock-free.hpp
